--- a/src/Pages/Freelisting/Businesslisting/Businesslisting.css
+++ b/src/Pages/Freelisting/Businesslisting/Businesslisting.css
@@ -10,12 +10,14 @@
 .link-box {
     border: 1px solid #ccc;
     padding: 10px;
-    width: 200px; 
-    height: 65px;
+    /* width: 200px; 
+    height: 65px; */
+    width: 250px;
+    height: 70px;
     margin-right: 10px; 
     margin-bottom: 10px; 
     text-align: center;
-    background-color:rgb(246, 244, 240);
+    background-color:rgb(243, 242, 237);
      border-radius: 10px; 
     
 }
@@ -37,8 +39,14 @@
 .selectdrp {
   border: 1px solid #ccc;
   border-radius: 4px; 
-  width: 250px;
+  width: 330px;
   height: 30px;
+}
+
+.managelistingimg{
+    width: 30px;
+    height: 35px;
+    margin-right: 10px;
 }
 
 
