--- a/src/FrontEnd/css/Mangelisting.css
+++ b/src/FrontEnd/css/Mangelisting.css
@@ -59,6 +59,46 @@
       bottom: 20px; /* Final position inside the viewport */
     }
   }
+
+  .custom-checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px; /* Adjust width */
+    height: 20px; /* Adjust height */
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    margin-right: 8px;
+  }
+  
+  .custom-checkbox:checked {
+    border-color: orange;
+    background-color: orange;
+  }
+  
+  .custom-checkbox:checked::after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 6px;
+    width: 4px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+  
+  .label-text-spacing {
+    margin-left: 8px;
+  }
+  .label-spacing {
+    display: flex;
+    align-items: center;
+  }
+  
   
   
   
