--- a/src/Pages/Freelisting/Businesslisting/Businesslisting.css
+++ b/src/Pages/Freelisting/Businesslisting/Businesslisting.css
@@ -40,7 +40,7 @@
   border: 1px solid #ccc;
   border-radius: 4px; 
   width: 330px;
-  height: 30px;
+  height: 50px;
 }
 
 .managelistingimg{
@@ -48,6 +48,12 @@
     height: 35px;
     margin-right: 10px;
 }
+
+.box{
+    height: 50px;
+}
+
+
 
 
 
