--- a/src/FrontEnd/css/Mangelisting.css
+++ b/src/FrontEnd/css/Mangelisting.css
@@ -98,6 +98,101 @@
     display: flex;
     align-items: center;
   }
+
+  .button {
+    background-color: #fb830d;
+    color: white;
+    margin-left: 10px;
+    border: 1px solid blue;
+  }
+  
+  .button:hover {
+    background-color: orange;
+  }
+  
+  .button.selected {
+    background-color: #fb830d;
+    color: black; /* Explicitly set the color to white */
+  }
+
+  
+  .file-input {
+    border: 2px solid grey;
+    height: 50px;
+    width: 500px;
+  }
+  .file-input2{
+    height: 50px;
+    width: 500px;
+  }
+  
+  /* Styles for smaller screens (e.g., mobile devices) */
+  @media (max-width: 768px) {
+    .file-input {
+      width: 100%; /* Full width for mobile view */
+      box-sizing: border-box; /* Include padding and border in the element’s total width and height */
+    }
+    .file-input2{
+      width: 100%;
+    }
+  }
+
+
+  /* for upload image button */
+
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; /* Adjust the gap between buttons as needed */
+}
+
+.button {
+  flex: 1 1 calc(50% - 10px); /* 50% width minus the gap */
+  box-sizing: border-box;
+  /* Add other button styles as needed */
+}
+
+
+
+
+/* Adjustments for larger screens (desktop) */
+@media (min-width: 768px) {
+  .button {
+    flex: 1; /* Default full width for desktop view */
+    max-width: none;
+  }
+}
+
+/*for working hours*/
+/* Default width for all input elements */
+.input-width {
+  width: 100%; /* Adjust as necessary */
+}
+
+/* Width for larger screens */
+@media (min-width: 768px) {
+  .input-width {
+    width: 350%;
+  }
+}
+
+/* Width for smaller screens */
+@media (max-width: 767px) {
+  .input-width {
+    width: 100%; /* Adjust as necessary */
+  }
+}
+
+
+
+
+
+
+
+  
+  
+  
+  
   
   
   
