Token authentication, user profile image and token expiry pending

--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -66,9 +66,9 @@ a.notification {
 	
 }
 
-.usericon .usericon-btn img {
+/* .usericon .usericon-btn img {
 	height: 23px;
-}
+} */
 
 .usericon .usericon-btn {
 	display: block;
