--- a/src/FrontEnd/css/dropdown.css
+++ b/src/FrontEnd/css/dropdown.css
@@ -104,7 +104,7 @@
 
 .btn_1 {
   display: block;
-  width: 100%;
+  /* width: 100%; */
   padding: 10px;
   background-color: #007bff;
   color: white;
