--- a/src/FrontEnd/css/dropdown.css
+++ b/src/FrontEnd/css/dropdown.css
@@ -2,11 +2,14 @@
   position: absolute;
   top: 100%; 
   left: 0;
+  transform: translateX(-50%);
   background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  /* border: 1px solid #ccc; */
+  /* border-radius: 4px; */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  width: 150px;
+  font-size: 20px;
 }
 
 .dropdown1 ul {
@@ -17,13 +20,13 @@
 
 .dropdown1 li {
   padding: 10px;
-  color: #333;
+  /* color: #333; */
   cursor: pointer;
 }
 
-.dropdown1 li + li {
+/* .dropdown1 li + li {
   border-top: 1px solid #ccc;
-}
+} */
 
 .dropdown1 li:hover {
   background-color: #f4f4f4;
