--- a/src/FrontEnd/css/Notification.css
+++ b/src/FrontEnd/css/Notification.css
@@ -10,16 +10,17 @@
     height: 50px;
     width: 50px;
     margin-right: 5px;
-    border-radius: 50%;
-    overflow: hidden;
+    /* border-radius: 100%; */
+    /* overflow: hidden; */
   }
   
   .notification-image img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
-    border-radius: 50%;
+    object-fit: contain; /* Change from cover to contain */
+    /* border-radius: 100%; */
   }
+  
   
   .notification-content {
     flex-grow: 1;
