--- a/src/FrontEnd/css/Header.css
+++ b/src/FrontEnd/css/Header.css
@@ -20,7 +20,7 @@
 
   }
   .nav-links li{
-    margin-right: 15px;
+    /* margin-right: 15px; */
     text-decoration: none;
   font-size: 1rem;
   }
