--- a/src/FrontEnd/css/Header.css
+++ b/src/FrontEnd/css/Header.css
@@ -95,14 +95,17 @@
         position: absolute;
         top:100%;
         right: 0;
-        width: 100%;
+        width: 35%;
         padding: 10px 0;
         text-align: center;
         z-index: 2;
         background-color: rgb(254, 253, 253);
+        border: 1px solid #a4a4a4;
+        right: -9px;
     }
     .nav-links.active{
         display: flex;
+        margin-right: 19px;
     }
     .nav-links li{
         margin: 15px;
@@ -125,6 +128,14 @@
         width: 100%;
     }
 
+    .burger .line{
+      width: 25px;
+      height: 3px;
+      margin: 5px;
+       background-color:black;
+       transition: 0.4s;
+    }
+
 
 
 
@@ -138,9 +149,35 @@
   }
 
   .usericon-img{
-    width:40px;
-    height: 40px;
+    width:50px;
+    height: 50px;
     border-radius: 50%;
-    object-fit: cover;
+    /* object-fit: cover; */
+  }
+
+  @media (max-width:767px) {
+    .usericon-img{
+      width:40px;
+      height: 40px;
+      border-radius: 25%;
+      border: 1px solid black;
+     
+    }
+
+    
+  }
+  .notification-img{
+    background: none;
+    border: none;
+
+  }
+  @media (max-width:767px) {
+    .notification-img{
+      width:40px;
+      height: 40px;
+      border-radius: 25%;
+      border: 1px solid black;
+  
+    }
   }
   
