--- a/src/FrontEnd/css/Notification.css
+++ b/src/FrontEnd/css/Notification.css
@@ -7,9 +7,9 @@
   }
   
   .notification-image {
-    height: 50px;
-    width: 50px;
-    margin-right: 5px;
+    /* height: 50px; */
+    width: 36px;
+    /* margin-right: 5px; */
     /* border-radius: 100%; */
     /* overflow: hidden; */
   }
