--- a/src/FrontEnd/css/Header.css
+++ b/src/FrontEnd/css/Header.css
@@ -108,7 +108,7 @@
         margin-right: 19px;
     }
     .nav-links li{
-        margin: 15px;
+        margin: 8px 10px;
     }
     .header_in .row
     {
@@ -149,8 +149,8 @@
   }
 
   .usericon-img{
-    width:50px;
-    height: 50px;
+    width:51px;
+    height: 45px;
     border-radius: 50%;
     /* object-fit: cover; */
   }
@@ -178,6 +178,16 @@
       border-radius: 25%;
       border: 1px solid black;
   
+    }
+  }
+
+
+  .buttonlogin{
+    width: 100%;
+  }
+  @media (max-width:767px) {
+    .buttonlogin{
+      width: 100%;
     }
   }
   
