--- a/src/FrontEnd/css/Serchbar.css
+++ b/src/FrontEnd/css/Serchbar.css
@@ -22,6 +22,7 @@
 .dropdownItemsearchbar {
     padding: 5px;
     border-bottom: 1px solid #ddd;
+    padding-top: 10px;
 }
 
 .dropdownItemsearchbar:hover {
