--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -408,8 +408,8 @@ footer ul {
 	margin-top: -5px;
 	pointer-events: none;
 	position: absolute;
-	right: 21px;
-	top: 45%;
+	right: 7px;
+	top: 19px;
 	transform-origin: 66% 66%;
 	transform: rotate( 44deg);
 	transition: all 0.15s ease-in-out;
@@ -1178,7 +1178,8 @@ option[value=""][disabled] {
 		line-height: 14px;
 		top:5px;
 		left: -7px;
-		height: 34px;
+		height: 31px;
+		padding-top: 7px;
 	}
 	.mb-space-remove {
 		padding: 0px;
@@ -1196,11 +1197,14 @@ option[value=""][disabled] {
 	.strip.map_view .listing-bottom-list {
 		position: absolute;
 		top: 3px;
-		/* padding: 10px 10px; */
+		padding: 10px 10px;
 		border-top: 0px;
 		/* left: calc(100% - 69%); */
-		left: 141px;
-		top: -39px;
+		left: 128px;
+		right: 19px;
+		top: -40px;
+		margin-left: -138px;
+		margin-right: -29px;
 	}
 	.categories-list .item {
 		text-align: center;
@@ -1385,7 +1389,7 @@ option[value=""][disabled] {
 		padding: 0px;
 	}
 	footer {
-		padding: 20px 0px 47px 0px;
+		padding: -6px 0px 47px 0px;
 	}
 	.listing-sidebar {
 		display: none;
