--- a/src/FrontEnd/css/style.css
+++ b/src/FrontEnd/css/style.css
@@ -1214,6 +1214,7 @@ footer h3 {
 @media (max-width: 575px) {
   footer ul {
     padding-top: 15px;
+    text-align: center;
   }
 }
 
@@ -3504,7 +3505,7 @@ a.box_feat h3 {
 
 .strip ul {
   padding: 20px 15px 17px 20px;
-  border-top: 1px solid #ededed;
+  /* border-top: 1px solid #ededed; */
 }
 
 .strip ul li {
@@ -3928,6 +3929,12 @@ a.box_feat h3 {
   margin-bottom: 0;
 }
 
+@media (max-width:767px) {
+  .strip.map_view ul {
+    padding: 0px 6px 7px 2px;
+    margin-bottom: -25px;
+  }
+}
 @media (max-width:767px) {
   .listing-bottom-list ul {
     padding: 0;
@@ -10340,7 +10347,7 @@ a.btn_3:hover,
     width: auto;
     height: 40px;
     margin-left: -30px !important;
-    margin-top: -3px !important;
+    margin-top: 12px !important;
   }
 
   .add_listing_card {
