--- a/src/Pages/Freelisting/Businesslisting/Businesslisting.css
+++ b/src/Pages/Freelisting/Businesslisting/Businesslisting.css
@@ -57,6 +57,7 @@
 .link-box {
     flex: 0 1 30%; /* Approximately 30% width to fit three items per row */
     margin-bottom: 20px; /* Add margin for spacing */
+    padding-top: 17px;
   }
   
   @media (max-width: 768px) {
@@ -67,6 +68,9 @@
 
 .box{
     height: 50px;
+    padding-left: 10px;
+
+
 }
 
 /*css for company dropdown*/
@@ -76,6 +80,33 @@
       max-width: 411px; /* Ensure it does not exceed 330px */
     }
   }
+
+.textareaabout {
+ margin-right: 0px;
+ width: 100%;
+   
+  }
+  @media (max-width:767px) {
+    .textareaabout {
+      margin-right: 0px;
+       width: 94%; 
+       }
+
+  }
+
+  .labelabout{
+    margin-right: 0px;
+  }
+
+  @media (max-width:767px) {
+    .labelabout{
+      margin-right: 11px;
+    }
+
+  }
+
+
+
 /*css for address dropdown*/
   @media (max-width: 768px) {
     .form-group {
@@ -88,9 +119,13 @@
       margin-bottom: 5px;
     }
   
-    .form-group select,
+    .form-group select{
+      width: 100%;
+    }
     .form-group textarea {
       width: 100%;
+      
+     
     }
   
     .text-left.col-12.mt-3 {
@@ -100,8 +135,11 @@
     }
   
     .btn_1 {
-      width: 100%;
+      width: 94%;
       margin-bottom: 10px;
+      /* margin-right: -57px;
+      margin-left: -39px; */
+      
     }
   
     .text-left.col-12.mt-3 > div {
