--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -496,6 +496,79 @@
     }
    
   }
+
+  /*Suggestion button*/
+  .suggestionbtn{
+    border: none;
+    /* color:orange; */
+    outline: none;
+    cursor: pointer;
+    display: inline-block;
+    text-decoration: none;
+    color: orange !important;
+    font-weight: 500;
+    transition: all 0.3s ease-in-out;
+    border-radius: 3px;
+    line-height: 1 !important;
+    padding: 10px 15px;
+    position: relative;
+    top: 2px;
+  }
+  @media (max-width:767px) {
+    .suggestionbtn{
+      border: none;
+     
+      outline: none;
+      cursor: pointer;
+      display: inline-block;
+      text-decoration: none;
+      color: orange !important;
+      font-weight: 500;
+      transition: all 0.3s ease-in-out;
+      border-radius: 3px;
+      line-height: 1 !important;
+      padding: 10px 15px;
+      position: relative;
+      top: 2px;
+    }
+  }
+
+
+  .suggestionstyle{
+    border: none;
+    /* color:orange; */
+    outline: none;
+    cursor: pointer;
+    display: inline-block;
+    text-decoration: none;
+    color: black !important;
+    font-weight: 500;
+    transition: all 0.3s ease-in-out;
+    border-radius: 3px;
+    line-height: 1 !important;
+    padding: 10px 15px;
+    position: relative;
+    top: 2px;
+  }
+
+  @media (max-width:767px) {
+    .suggestionstyle{
+      border: none;
+     
+      outline: none;
+      cursor: pointer;
+      display: inline-block;
+      text-decoration: none;
+      color: black !important;
+      font-weight: 500;
+      transition: all 0.3s ease-in-out;
+      border-radius: 3px;
+      line-height: 1 !important;
+      padding: 10px 15px;
+      position: relative;
+      top: 2px;
+    }
+  }
   
 
 
