--- a/src/FrontEnd/css/RegistrationMV.css
+++ b/src/FrontEnd/css/RegistrationMV.css
@@ -756,6 +756,15 @@ width: 119%;
 }
 
 
+/* .homefooter{
+  bottom: 20px;
+}
+@media (max-width:767px) {
+  .homefooter{
+    bottom: 54px;
+  }
+} */
+
 
 
 
