--- a/src/Pages/Freelisting/Businesslisting/Businesslisting.css
+++ b/src/Pages/Freelisting/Businesslisting/Businesslisting.css
@@ -16,7 +16,7 @@
     height: 70px;
     margin-right: 10px; 
     margin-bottom: 10px; 
-    text-align: center;
+    /* text-align: center; */
     background-color:rgb(243, 242, 237);
      border-radius: 10px; 
     
