--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -1374,10 +1374,12 @@ option[value=""][disabled] {
 		position: fixed;
 		bottom: 0;
 		background-color: #fff;
-		width: 50%;
+		width: 100%;
 		box-shadow: 0px 0px 30px 0px rgb(0 0 0 / 10%);
 		z-index: 100000;
 	}
+
+	
 	.bottom-link-sticky-list a {
 		padding: 10px 5px;
 		display: block;
@@ -1396,6 +1398,7 @@ option[value=""][disabled] {
 	}
 	footer {
 		padding: -6px 0px 47px 0px;
+		padding-bottom: 55px;
 	}
 	.listing-sidebar {
 		display: none;
