--- a/src/FrontEnd/css/style.css
+++ b/src/FrontEnd/css/style.css
@@ -1166,6 +1166,7 @@ footer {
   border-top: 1px solid #ededed;
   background-color: #fb830d;
   padding: 20px 0px 10px 0px;
+  
 }
 
 footer h3 {
@@ -9706,10 +9707,22 @@ article.blog .post_info ul li:last-child i {
   height: 100%;
 }
 
+.upload_imagesbanner {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+
+.upload_imagesgallery {
+  
+  height: 100%;
+}
+
 .upload_images {
   width: 100%;
   height: 100%;
 }
+
 
 .delete_img {
   position: absolute;
