--- a/src/FrontEnd/css/custom.css
+++ b/src/FrontEnd/css/custom.css
@@ -559,8 +559,8 @@ footer ul {
 }
 
 .cust-profile img {
-	border: 1px solid #fb830d;
-	border-radius: 50%;
+	/* border: 1px solid #fb830d;
+	border-radius: 50%; */
 	margin-bottom: 12px;
 	width: 125px;
 }
@@ -1182,8 +1182,8 @@ option[value=""][disabled] {
 	.listing-bottom-list .loc_open {
 		font-size: 12.9px;
 		line-height: 14px;
-		top:5px;
-		left: -5px;
+		top:1px;
+		left: 7px;
 		height: 31px;
 		padding-top: 7px;
 	}
